[project]
name = "xinobi-langchain-test-20251112"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.7.0",
    "langchain>=1.0.5",
    "langchain-anthropic>=1.0.3",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.3",
    "python-dotenv>=1.2.1",
]
