[project]
name = "xinobi-langchain-test-20251112"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.4",
    "fastapi>=0.121.2",
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "jupyter>=1.1.1",
    "langchain>=1.0.5",
    "langchain-anthropic>=1.0.3",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.3",
    "langgraph-cli[inmem]>=0.4.7",
    "nbconvert>=7.16.6",
    "notebook>=7.4.7",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]
